Fix retrieve data and category pages

--- a/www/templates/hotelCode.html
+++ b/www/templates/hotelCode.html
@@ -7,8 +7,8 @@
 		    	<h3 class="sub-title">Hotel Code Page</h3>
 
 			<form ng-submit="Submit(code)">
-			    <div class="list list-inset">
-				  	<label class="item item-input">
+			    <div class="list code-input ">
+				  	<label class="item-input">
 				    	<input type="email" ng-model="code.val" placeholder="Enter Code Here">
 				  	</label>
 				</div>
