--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -1,10 +1,23 @@
-<ion-view view-title="Events">
-<ion-header-bar class="bar bar-header">
-<a class="button icon-left ion-ios-arrow-back button-clear" href="#/hotelPage"></a>
-      <h1 class="title">Hotel Name</h1>
-    </ion-header-bar>
-  <ion-content>
-  <h3>Events</h3>
-    
-  </ion-content>
+
+<ion-view view-title="Our Events">
+	<ion-header-bar class="bar bar-header">
+		<a class="button icon-left ion-ios-arrow-back button-clear" href="#/hotelPage"></a>
+		  <h1 class="title">{{hotelname}}</h1>
+	</ion-header-bar>
+
+	<ion-content overflow-scroll=”true”>
+		  	<div class="welcome">
+		  		<h2>Our Events</h2>
+		  	</div>
+		  	<div class="border"></div>
+
+		<ion-list>
+			<ion-item class="item-thumbnail-left" ng-repeat="event in events">
+			      <img ng-repeat="image in event.images" ng-src="{{image}}">
+			      <h2>{{event.title}}</h2>
+			      <pre>{{event.post}}</pre>
+		    </ion-item>
+		</ion-list>
+	
+	</ion-content>
 </ion-view>
