--- a/www/templates/facilities.html
+++ b/www/templates/facilities.html
@@ -1,40 +1,30 @@
+
 <ion-view view-title="Our Facilities">
 	<ion-header-bar class="bar bar-header">
 		<a class="button icon-left ion-ios-arrow-back button-clear" href="#/hotelPage"></a>
-		  <h1 class="title">Hotel Name</h1>
+		  <h1 class="title">{{hotelname}}</h1>
 	</ion-header-bar>
 
 	<ion-content overflow-scroll=”true”>
-	  	<div class="welcome">
-	  		<h2>Our Facilities</h2>
-	  	</div>
-  		<!-- Images slide show  -->
-	 <ion-slide-box class="slidebox" show-pager="true" does-continue="true" auto-play="true" on-slide-changed="slideHasChanged($index)">
-	    <ion-slide>
-	        <img src="img/pic5.jpg"/>
-	    </ion-slide>
-	    <ion-slide>
-	        <img src="img/pic6.jpg"/>
-	    </ion-slide>
-	    <ion-slide>
-	        <img src="img/pic7.jpg"/>
-	    </ion-slide>
-	    <ion-slide>
-	        <img src="img/pic8.jpg"/>
-	    </ion-slide>
-	</ion-slide-box>
+		  	<div class="welcome">
+		  		<h2>Our Facilities</h2>
+		  	</div>
+	  		<!-- Images slide show  -->
+	  	<ion-slide-box class="slidebox" show-pager="true" does-continue="true" auto-play="true" on-slide-changed="slideHasChanged($index)" >
+		    <ion-slide ng-repeat="facility in facilities">
+			    <div ng-repeat="image in facility.images">
+			        <img  ng-src="{{image}}"/>
+			    </div>
+		    </ion-slide>
+		</ion-slide-box>
 
-	<div class="list">
-
-	    <div class="item item-thumbnail-left">
-	      <img src="img/3-512.png">
-	      <h2>Gym</h2>
-	      <p>7th floor</br>
-	      Opening hours : 07:00 - 20:00</p>
-	    </div>
-	</div>
-
-
-
+		<ion-list>
+			<ion-item class="item-thumbnail-left" ng-repeat="facility in facilities">
+			      <img ng-repeat="image in facility.images" ng-src="{{image}}">
+			      <h2>{{facility.title}}</h2>
+			      <pre>{{facility.post}}</pre>
+		    </ion-item>
+		</ion-list>
+	
 	</ion-content>
-	</ion-view>
+</ion-view>
