--- a/www/templates/restaurant.html
+++ b/www/templates/restaurant.html
@@ -1,10 +1,21 @@
 <ion-view view-title="Restaurent">
 <ion-header-bar class="bar bar-header">
 <a class="button icon-left ion-ios-arrow-back button-clear" href="#/hotelPage"></a>
-      <h1 class="title">Hotel Name</h1>
+      <h1 class="title">{{hotelname}}</h1>
     </ion-header-bar>
-  <ion-content>
-  <h3>Today In Our Restaurant</h3>
-    
-  </ion-content>
+  <ion-content overflow-scroll=”true”>
+		  	<div class="welcome">
+		  		<h2>Our Restaurant</h2>
+		  	</div>
+		  	<div class="border"></div>
+
+		<ion-list>
+			<ion-item class="item-thumbnail-left" ng-repeat="menu in menus">
+			      <img ng-repeat="image in menu.images" ng-src="{{image}}">
+			      <h2>{{menu.title}}</h2>
+			      <pre>{{menu.post}}</pre>
+		    </ion-item>
+		</ion-list>
+	
+	</ion-content>
 </ion-view>
